# render_kinect

./: .gitignore  CMakeLists.txt  README.md  __init__.py  run_via_python.py  setup.py
include/render_kinect/: camera.h  kinectSimulator.h  objectMeshModel.h  simplex.h  simulate.h
src/: kinectSimulator.cpp  main.cpp  main_kinect.cpp  noiseutils.cpp  simulate.cpp
